fix timing on slide out if menu is open when they collapse the #header

--- a/app/stylesheets/base/_ic_app_header.scss
+++ b/app/stylesheets/base/_ic_app_header.scss
@@ -51,7 +51,7 @@ $ic-tooltip-arrow-size: 0.375rem;
   background-color: $sm-brand-dark;
   transition-duration: .24s;
   transition-property: width;
-  transition-timing-function: ease-in;
+  transition-timing-function: ease-in-out;
 }
 
 .ic-app-header__main-navigation {
@@ -418,26 +418,22 @@ body.primary-nav-expanded {
   overflow-x: hidden;
   width: $ic-sp*28;
   top: 0; bottom: 0;
-  left: $ic-header-primary-width - 30;
+  left: $ic-header-primary-width;
+  transform: translateX($ic-header-primary-width);
   transition-duration: .24s;
-  transition-property: left;
-  transition-timing-function: ease-in;
+  transition-property: left, opacity, transform;
+  transition-timing-function: ease-in-out;
 
   @if $use_high_contrast == false {
     &:focus { outline: none; }
   }
-  body.primary-nav-expanded & {
-    left: $ic-header-primary-width;
-  }
 }
 
 .ReactTray__Content--after-open {
-  transition: transform 0.2s ease-out;
-  transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
 
 .ReactTray__Content--before-close {
-  transition: all 0.2s ease-in;
   transform: translate3d(-100%,0,0);
   opacity: 0;
 }
